--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+logs/*
+output/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
