--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-logs/*
-output/*
+logs/*.log
+output/*.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
